--- a/laShop/View/Base.lproj/Main.storyboard
+++ b/laShop/View/Base.lproj/Main.storyboard
@@ -110,7 +110,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uw0-kK-lFc">
-                                <rect key="frame" x="23" y="395" width="721" height="501"/>
+                                <rect key="frame" x="23" y="395" width="721" height="587"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -268,7 +268,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="0.26000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <connections>
                         <outlet property="tableview" destination="aQa-g9-kTD" id="YsD-Jo-aIe"/>
@@ -447,6 +447,6 @@
         <image name="sectionController" width="3200" height="4100"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="NCv-QC-M2j"/>
+        <segue reference="HuJ-Mq-e0a"/>
     </inferredMetricsTieBreakers>
 </document>
